tests/toylang/neg/001179_mutation.toylang
program a = { 0 while a do sleep; } .
